--- a/officeServer/package.json
+++ b/officeServer/package.json
@@ -2,11 +2,13 @@
   "name": "onlyoffice-server",
   "version": "1.0.0",
   "description": "OnlyOffice API 服务器，处理文档编辑回调和配置",
-  "main": "api-example.js",
+  "main": "src/api-example.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "node api-example.js",
-    "dev": "node api-example.js"
+    "start": "ts-node src/api-example.ts",
+    "dev": "ts-node src/api-example.ts",
+    "build": "tsc",
+    "start:prod": "node dist/api-example.js"
   },
   "keywords": [
     "onlyoffice",
@@ -18,7 +20,15 @@
   "dependencies": {
     "express": "^4.18.2",
     "minio": "^7.1.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
+    "@types/node": "^20.10.6",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.5"
+  }
 }
