--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3.8"
 services:
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
     container_name: minio-server
+    hostname: minio-server
     restart: unless-stopped
     ports:
       - "9000:9000"  # MinIO API 端口
@@ -19,17 +20,22 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
+    networks:
+      default:
+        aliases:
+          - minio
 
   onlyoffice:
-    image:  guanyueyun/ooffice:7.1.1.23
+    image:  onlyoffice/documentserver:7.5
     container_name: onlyoffice-server
+    hostname: onlyoffice-server
     restart: unless-stopped
     ports:
       - "3333:80"
     environment:
       - WOPI_ENABLED=true         # 核心开关
       - JWT_ENABLED=true
-      - JWT_HEADER=Authorization
+      - JWT_HEADER=AuthorizationJwt
       - JWT_IN_BODY=true
       - JWT_SECRET=jnYyXgPeDFL0+TwE+t4Ww2lVTDqOZJVZWWpLwiVBcxY= # 生产请换成 32 位随机串
       - ALLOW_PRIVATE_IP=true     # 本地调试必需
@@ -38,7 +44,7 @@ services:
       - ./data/app:/var/www/onlyoffice/Data
       - ./data/lib:/var/lib/onlyoffice
       - ./data/db:/var/lib/postgresql
-      - ./config/local-production-linux.json:/etc/onlyoffice/documentserver/local-production-linux.json
+      # - ./config/local.json:/etc/onlyoffice/documentserver/local.json
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/healthcheck"]
       interval: 30s
@@ -48,13 +54,16 @@ services:
     depends_on:
       - minio
     networks:
-      - default
+      default:
+        aliases:
+          - onlyoffice
 
   api-server:
     build:
       context: ./officeServer
       dockerfile: Dockerfile
     container_name: onlyoffice-api-server
+    hostname: api-server
     restart: unless-stopped
     ports:
       - "3001:3001"
@@ -63,10 +72,14 @@ services:
       - PORT=3001
       - HOST=0.0.0.0
       - JWT_SECRET=jnYyXgPeDFL0+TwE+t4Ww2lVTDqOZJVZWWpLwiVBcxY= # 与 onlyoffice 服务保持一致
+      # - ONLYOFFICE_DOCUMENT_SERVER_URL=http://onlyoffice  # 使用内部主机名
+      # - ONLYOFFICE_CALLBACK_URL=http://api-server:3001/onlyofficeServer/onlyoffice/callback  # 内部回调地址
     volumes:
       - ./officeServer/config.json:/app/config.json:ro
     depends_on:
       - minio
       - onlyoffice
     networks:
-      - default
+      default:
+        aliases:
+          - api-server
